<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ic.namnh.moneylover.LoginActivity"
    android:background="#00ff08"
    android:fadeScrollbars="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:id="@+id/logo"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:background="#ffffff"
        android:weightSum="100">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:weightSum="100"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login.loginMessage"
                android:id="@+id/textView"
                android:layout_weight="80"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#000000"
                android:textIsSelectable="false"
                android:enabled="false"
                android:editable="false"
                android:duplicateParentState="false" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:weightSum="100"
            android:baselineAligned="false">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:id="@+id/margin1"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:weightSum="100">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:id="@+id/margin2"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_loginRegisterButton"
                    android:id="@+id/registerButton"
                    android:layout_weight="94"
                    android:textColor="#ffffff"
                    android:background="@drawable/loginbuttonlayout"
                    android:radius="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_loginLoginButton"
                    android:id="@+id/button2"
                    android:layout_weight="94"
                    android:textColor="#ffffff"
                    android:background="@drawable/loginbuttonlayout"
                    android:radius="101dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:weightSum="100"
            android:gravity="center"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:weightSum="100"
                android:gravity="center_vertical">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="1sp"
                    android:layout_weight="30"
                    android:background="#808080"></FrameLayout>

                <TextView
                    android:layout_width="0sp"
                    android:layout_height="fill_parent"
                    android:text="@string/login_maybeLater"
                    android:id="@+id/textView2"
                    android:layout_weight="40"
                    android:gravity="center"
                    android:textColor="@android:color/black" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="1sp"
                    android:layout_weight="30"
                    android:background="#808080" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/login_tryTheApp"
            android:id="@+id/textView3"
            android:layout_weight="20"
            android:gravity="center"
            android:textColor="#00ff04"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/login_restoreData"
            android:id="@+id/textView4"
            android:layout_weight="20"
            android:gravity="center"
            android:textColor="#00ff00" />

    </LinearLayout>
</LinearLayout>